2012-05-23  H.J. Lu  <hongjiu.lu@intel.com>

	* sysdeps/unix/sysv/linux/i386/sysdep.h (SYSCALL_ERROR_HANDLER):
	Replace "jmp L(pseudo_end)" with "ret".
	* sysdeps/unix/sysv/linux/x86_64/sysdep.h (SYSCALL_ERROR_HANDLER):
	Likewise.

2012-05-23  Andreas Jaeger  <aj@suse.de>

	* sysdeps/unix/sysv/linux/syscalls.list: Add poll.
	* sysdeps/unix/sysv/linux/poll.c: Remove file.

2012-05-23  Andreas Jaeger  <aj@suse.de>
	    Maximilian Attems  <max@stro.at>

	* sysdeps/unix/sysv/linux/sys/reboot.h (RB_SW_SUSPEND, RB_KEXEC):
	New macros.

2012-05-23  H.J. Lu  <hongjiu.lu@intel.com>

	* sysdeps/unix/sysv/linux/x86_64/x32/sched_getcpu.S: Rearrange
	code so that pseudo_end is just ret and the stack pointer is
	correct also for static library in error case.

2012-05-23  Joseph Myers  <joseph@codesourcery.com>

	* sysdeps/unix/sysv/linux/powerpc/chown.c: Add comment suggesting
	move to syscalls.list.
	* sysdeps/unix/sysv/linux/powerpc/powerpc64/pread.c: Likewise.
	* sysdeps/unix/sysv/linux/powerpc/powerpc64/pread64.c: Likewise.
	* sysdeps/unix/sysv/linux/powerpc/powerpc64/pwrite.c: Likewise.
	* sysdeps/unix/sysv/linux/powerpc/powerpc64/pwrite64.c: Likewise.

	* manual/install.texi (Running make install): Do not mention Linux
	kernel version for which pt_chown is not needed.
	(Linux): Do not mention problems with nscd with 2.0 kernels.
	* INSTALL: Regenerated.

2012-05-23  Andreas Jaeger  <aj@suse.de>

	* sysdeps/unix/sysv/linux/powerpc/bits/mman.h
	(MADV_DONTDUMP,MADV_DODUMP): New macros from Linux 3.4.
	macro.
	* sysdeps/unix/sysv/linux/s390/bits/mman.h
	(MADV_DONTDUMP,MADV_DODUMP): Likewise.
	* sysdeps/unix/sysv/linux/sh/bits/mman.h
	(MADV_DONTDUMP,MADV_DODUMP): Likewise.
	* sysdeps/unix/sysv/linux/i386/bits/mman.h
	(MADV_DONTDUMP,MADV_DODUMP): Likewise.
	* sysdeps/unix/sysv/linux/sparc/bits/mman.h
	(MADV_DONTDUMP,MADV_DODUMP): Likewise.
	* sysdeps/unix/sysv/linux/x86_64/bits/mman.h
	(MADV_DONTDUMP,MADV_DODUMP): Likewise.
	* sysdeps/unix/sysv/linux/bits/in.h